# 4722_code

./: .gitignore  README.md  README1.md
cs4722lib/: CMakeLists.txt  Doxyfile  DoxygenLayout-cs4722lib.xml  callbacks.h
cs4722lib/01-many-points/: main.cpp
cs4722lib/01-texture-from-pattern/: computed-image.cpp
cs4722lib/02-many-colors/: fragment_shader02.glsl  main.cpp
cs4722lib/05-point-lighting/: point_lighting.cpp
cs4722lib/07-terrain/: fragment_shader07.glsl  main.cpp  vertex_shader07.glsl
cs4722lib/documentation/: mainpage.md
cs4722lib/include/cs4722/: height_field.h  shape.h  texture_utilities.h  window.h  x11.h
cs4722lib/include/learnopengl/: shader.h
cs4722lib/src/STB/: stb_image.cpp
cs4722lib/src/cs4722/: artifact.cpp  artifact_elliptical_orbit.cpp  block.cpp  buffer_utilities.cpp  cylinder.cpp  height_field.cpp  rectangle.cpp  shape.cpp  sphere.cpp  terrain.cpp  texture_utilities.cpp  torus.cpp  transform.cpp  utility_glm.cpp  view.cpp  window.cpp  x11.cpp
cs4722lib/src/glad/: gl.c
cs4722lib/src/redbook/: LoadShaders.cpp
m01-intro-cpp/: CMakeLists.txt
m01-intro-cpp/01-hello-world/: main.cpp
m01-intro-cpp/02-window/: window.cpp
m01-intro-cpp/03-one-triangle/: fragment_shader03.glsl  one-triangle.cpp  vertex_shader03.glsl
m02-intro-opengl/: CMakeLists.txt
m02-intro-opengl/01-one-triangle/: one-triangle.cpp
m02-intro-opengl/02-three-triangles/: three-triangles.cpp
m02-intro-opengl/03-square/: fragment_shader03.glsl  square.cpp  vertex_shader03.glsl
m02-intro-opengl/04-square-one-buffer/: square-one-buffer.cpp
m02-intro-opengl/05-shapes/: shapes.cpp
m02-intro-opengl/06-coordinate-orientation/: coordinate_orientation.cpp
m02-intro-opengl/skip/: cmake-kits.json  launch.json  settings.json
m02-intro-opengl/skip/01-many-points/: fragment_shader01.glsl  main.cpp
m02-intro-opengl/skip/02-many-points/: many_points.cpp  vertex_shader02.glsl
m02-intro-opengl/skip/03-many-colors/: many_colors.cpp  vertex_shader03.glsl
m03-transformations/: CMakeLists.txt
m03-transformations/01-static-transform/: static-transform.cpp
m03-transformations/02-use-transform/: static-transform-use-transform.cpp
m03-transformations/03-use-artifact-and-attributes/: use_artifact.cpp
m03-transformations/04-multiple-artifacts/: multiple_artifacts.cpp  multiple_artifacts_buffered.cpp
m03-transformations/05-shared-shapes/: shared_shapes.cpp  shared_shapes_buffered.cpp
m03-transformations/07-animation/: animation.cpp
m03-transformations/08-rotate-about-center/: rotate-about-center.cpp
m03-transformations/09-oscillation/: artifact_oscillating.cpp  artifact_oscillating.h  oscillation.cpp
m03-transformations/10-animation-many/: animation_many.cpp
m03-transformations/11-use-material/: fragment_shader-11.glsl  use_material.cpp  vertex_shader-11.glsl
m03-transformations/12-mix-material-shape-pattern/: fragment_shader-12.glsl  mix_material_shape.cpp  vertex_shader-12.glsl
m04-view-projection/: CMakeLists.txt  vertex_shader.glsl
m04-view-projection/00-shapes/: shapes.cpp
m04-view-projection/01-view/: view.cpp
m04-view-projection/02-projection/: projection.cpp
m04-view-projection/03-user-interaction/: user-interaction.cpp
m04-view-projection/04-window-events/: window_events.cpp
m05-textures/: CMakeLists.txt  callbacks.h
m05-textures/01-texture-from-pattern/: computed-image.cpp
m05-textures/02-texture-from-image/: file-image.cpp
m05-textures/03-texture-on-shape/: texture_on_shape.cpp
m05-textures/04-multiple-textures/: multiple_textures.cpp
m05-textures/05-min-filters/: min-filters.cpp
m05-textures/06-mixed-colors/: fragment_shader06.glsl  mixed-colors.cpp
m06-lighting-and-shading/: CMakeLists.txt
m06-lighting-and-shading/01-ambient-color/: ambient_color.cpp  fragment_shader01.glsl  vertex_shader01.glsl
m06-lighting-and-shading/02-ambient-light/: ambient-light.cpp  fragment_shader02.glsl  vertex_shader02.glsl
m06-lighting-and-shading/03-visualize-normals/: fragment_shader03.glsl  vertex_shader03.glsl  visualize_normals.cpp
m06-lighting-and-shading/04-adjust-normals/: adjust_normals.cpp  fragment_shader04.glsl  vertex_shader04.glsl
m06-lighting-and-shading/05-point-lighting/: fragment_shader05.glsl  vertex_shader05.glsl
m06-lighting-and-shading/06-directional-lighting/: directional_lighting.cpp  fragment_shader06.glsl
m06-lighting-and-shading/07-shading-textures/: fragment_shader07.glsl  shading_textures.cpp  vertex_shader07.glsl
m07-advanced-textures/: CMakeLists.txt
m07-advanced-textures/01-sky-box/: skybox.cpp
m07-advanced-textures/03A-image-processing-static-image/: file-image.cpp
m07-advanced-textures/03C-pixel-filters/: fragment_shader03C.glsl
m07-advanced-textures/04-dynamic-reflection/: dynamic-reflection.cpp  scene2.cpp
m08-procedural-textures/: CMakeLists.txt
m08-procedural-textures/01-stripes/: fragment_shader01.glsl  stripes.cpp  vertex_shader01.glsl
m08-procedural-textures/02-fractal/: fractal.cpp  fragment_shader02.glsl  vertex_shader02.glsl
m08-procedural-textures/03-bump-map/: bump_map.cpp  fragment_shader03.glsl  vertex_shader03.glsl
m08-procedural-textures/04-noise-on-square/: fragment_shader04.glsl  noise-on-square.cpp  vertex_shader04.glsl
m08-procedural-textures/05-compare-noise/: compare_noise.cpp  fragment_shader05.glsl  vertex_shader05.glsl
m08-procedural-textures/06-clouds/: clouds.cpp  fragment_shader06.glsl  vertex_shader06.glsl
m08-procedural-textures/07-clouds-glsl/: clouds_glsl.cpp  fragment_shader07.glsl  vertex_shader07.glsl
